ci: change npm by pnpm on github actions

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,9 +6,9 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: 'Version to publish (patch, minor, major, or specific version like 1.0.0)'
+        description: "Version to publish (patch, minor, major, or specific version like 1.0.0)"
         required: true
-        default: 'patch'
+        default: "patch"
         type: choice
         options:
           - patch
@@ -26,7 +26,7 @@ jobs:
     permissions:
       contents: write
       id-token: write
-    
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -37,24 +37,31 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
-          version: 8
+          version: 9
+          run_install: false
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          registry-url: 'https://registry.npmjs.org'
-          cache: 'pnpm'
+          node-version: "20"
+          registry-url: "https://registry.npmjs.org"
+          cache: "pnpm"
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: |
+          if [ -f "pnpm-lock.yaml" ]; then
+            pnpm install --frozen-lockfile
+          else
+            echo "⚠️ pnpm-lock.yaml not found, installing without frozen lockfile"
+            pnpm install
+          fi
 
       - name: Run linter
         run: pnpm run lint
 
       - name: Run tests
         run: pnpm run test
-        continue-on-error: true  # Permite continuar mesmo se testes falharem (remover se quiser bloquear)
+        continue-on-error: true # Permite continuar mesmo se testes falharem (remover se quiser bloquear)
 
       - name: Build package
         run: pnpm run build
@@ -112,7 +119,7 @@ jobs:
         run: |
           VERSION="${{ steps.version.outputs.version }}"
           PACKAGE_NAME="@arranjae/automate-features"
-          
+
           if pnpm view "$PACKAGE_NAME@$VERSION" version > /dev/null 2>&1; then
             echo "❌ Version $VERSION already exists on NPM"
             echo "exists=true" >> $GITHUB_OUTPUT
@@ -147,17 +154,17 @@ jobs:
           name: Release v${{ steps.version.outputs.version }}
           body: |
             ## 🚀 Release v${{ steps.version.outputs.version }}
-            
+
             Publicado automaticamente no NPM.
-            
+
             ### Instalação
-            
+
             ```bash
             npm install @arranjae/automate-features@${{ steps.version.outputs.version }}
             ```
-            
+
             ### Mudanças
-            
+
             Consulte [CHANGELOG.md](../../CHANGELOG.md) para detalhes.
           draft: false
           prerelease: false
@@ -175,4 +182,3 @@ jobs:
             echo "" >> $GITHUB_STEP_SUMMARY
             echo "📦 Pacote: [@arranjae/automate-features@${{ steps.version.outputs.version }}](https://www.npmjs.com/package/@arranjae/automate-features)" >> $GITHUB_STEP_SUMMARY
           fi
-
