ci: change npm by pnpm on github actions

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
-# Cursor API Configuration
+# AI Provider Configuration
+# PROMPT_AI_TYPE pode ser: CURSOR ou CLAUDE_CODE
+PROMPT_AI_TYPE=CURSOR
+
+# PROMPT_AI_KEY é a chave de API do provedor escolhido
+PROMPT_AI_KEY=your_ai_provider_key_here
+
+# Cursor API Configuration (legacy - mantido para compatibilidade)
 # Obtenha seu token em: https://cursor.sh/settings
 CURSOR_API_TOKEN=your_cursor_api_token_here
 
