--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "check:solid": "node scripts/check-solid.js",
     "check:atomic": "node scripts/check-atomic.js",
     "prepack": "npm run build",
-    "prepublishOnly": "npm run build && npm run lint && npm run test",
+    "prepublishOnly": "npm run build && npm run lint:fix && npm run test",
     "prepare": "npm run build",
     "version": "npm run build",
     "postversion": "git push && git push --tags",
